fixed index layout issue and removed dead code

--- a/src/index.sass
+++ b/src/index.sass
@@ -2,9 +2,10 @@ body
     margin: 0
 
 .content
-    margin-top: 30vh
+    margin-top: 20vh
     margin-left: 7%
     margin-right: 7%
+
 .page-layout-wrapper
     min-height: 100vh
     display: grid
